@@ -9,21 +9,17 @@ Attempts to set environment variables so that AD Model Builder will "just work" 
 }
 \usage{
 setup_admb(admb_home)
-clean_admb(fn, which=c("all","sys","output","none"),profpars=NULL)
+clean_admb(fn, which=c("sys","output"))
 }
 \arguments{
   \item{admb_home}{(character) directory containing AD Model Builder
     binary files}
   \item{fn}{(character) base name of ADMB model files}
-  \item{which}{what to remove (system/output files or input files)}
-  \item{profpars}{(character) names of parameters that have been profiled (i.e.,
-   \code{.plt} files to remove)}
+  \item{which}{what to remove: any combination of "sys" (system),
+    "input", "output", or "all" or "none"}
 }
-\note{Only 'all' option is currently implemented in clean_admb()
-  [i.e., remove all except TPL file]
-  }
 \details{
-(1) If the environment variable ADMB_HOME is not already set and admb_home is not
+  (1) If the environment variable ADMB_HOME is not already set and admb_home is not
 specified, this function will try to set it sensibly. (I.e., on Unix systems, it will run a "locate" command (if one is available) to try
 to find the binaries, and thereafter check if they are installed
 in the default location (/usr/local/admb); on Windows it will assume they are installed in the default
